# VernierParser

./: LICENSE  README.md  pyproject.toml  vernier_cli.py  vernier_series.py
.github/workflows/: lint.yml
vernier_parser/: __init__.py  vernier.py  vernier_cli.py  vernier_series.py
